# rust-scripting-example

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
calculator/: Cargo.toml  Makefile  build.rs  cbindgen.toml  lua_interpreter.c  teste.lua
calculator/.cargo/: config
calculator/include/: calculator.h
calculator/lua/: teste.lua
calculator/src/: lib.rs  main.rs
calling-lua/: Cargo.toml  build.rs  call.h  lixo.lua  pablo.c
calling-lua/.cargo/: config
calling-lua/src/: main.rs
engine/: Cargo.toml
engine/src/: main.rs
mock-engine/: Cargo.toml  build.rs
mock-engine/.cargo/: config
mock-engine/c/: lua_vm.c
mock-engine/shared/: Cargo.toml
mock-engine/src/: main.rs
mock-engine/src/script/: calc.lua
mock/script_manager/: Cargo.toml  build.rs
mock/script_manager/.cargo/: config
mock/script_manager/src/: main.rs
mock/scripting_api/: Cargo.toml
pong/: Cargo.toml
pong/src/: main.rs
rust_scripts/: Cargo.toml
rust_scripts/src/: lib.rs
script-manager/: Cargo.toml
script_manager/: Cargo.toml  build.rs
script_manager/c/: lua_vm.c
script_manager/drivers/: lua_vm.c  python_vm.c  rust_vm.c
script_manager/scripts/: calc.lua  calc.py  rust_mock.rs  test.lua
script_manager/src/: main.rs
scripting/: Cargo.toml  hello.lua
scripting-api/: Cargo.toml
scripting/src/: main.rs
scripting_api/: Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs
