[package]
name = "calling-lua"
version = "0.1.0"
authors = ["Pablo Silva <pablodiegoss@hotmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"

[build-dependencies]
cc = "1.0"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"