[package]
name = "pong"
version = "0.1.0"
authors = ["Pablo Diego <pablodiegoss@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst_rendy = { version = "^0.3.0", features = ["vulkan"] }
amethyst = "0.13.0"

#[features]
#rendy = "0.3.2"
#vulkan = ["rendy/vulkan"]