[package]
name = "rust_scripts"
version = "0.1.0"
authors = ["Pablo Diego <pablodiegoss@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scripting_api = {path = "../scripting_api"}

[lib]
crate-type = ["cdylib"]