[package]
name = "script_manager"
version = "0.1.0"
authors = ["Rodrigo Oliveira <rodrigo.redcode@gmail.com>", "Pablo Diego Silva da Silva <pablodiegoss@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
scripting_api = {path = "../scripting_api"}
rust_scripts = {path = "../rust_scripts"}

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
